post fix: JSConf JP 2024記事でYouTubeリンクを追加・改善(#199)

--- a/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
+++ b/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
@@ -38,15 +38,22 @@ x アカウントについては、以下のように確認できたものを記
   - 本人記事を追加：B 15:30-16:00 Modular Monolith Monorepo
 - 2024/11/28
   - スライドを追加：D 15:30-16:00 クルマのサブスクサービスを Next.js で内製化した経験とその1年後
+- 2024/12/31
+  - YouTube ライブ配信リンクをトラックごとに追加 + 各講演動画リンクも追加
 
 ## アーカイブ
 
 本イベントは YouTube でライブ配信されていました。
 
-ただ、執筆途中時点からトラック A の動画が非公開になっていました。
-アーカイブとして残るのかがわからなかったため、一旦 JSConf JP の YouTube アカウントへのリンクのみ記載にしておきます。
+執筆途中時点から諸事情でトラック A の動画が非公開になっていましたが、調整後に再度公開されたためリンク載せておきます。
 
-<OG url="https://www.youtube.com/@jsconfjp" />
+<OG url="https://www.youtube.com/watch?v=ew1zmA7y9q8" />
+
+<OG url="https://www.youtube.com/watch?v=2BXwigWGjWQ" />
+
+<OG url="https://www.youtube.com/watch?v=E3yTtaGr7V8" />
+
+<OG url="https://www.youtube.com/watch?v=5Wt0r5vHOwQ" />
 
 ## 講演一覧
 
@@ -59,22 +66,26 @@ x アカウントについては、以下のように確認できたものを記
 ### A 10:10-10:20 LT: Connecting the dots – Web Accessibility through Internationalization and Localization
 
 - 登壇者：Sahil Khokhar　[@505sahil](https://x.com/505sahil)
+- 動画：[YouTube](https://www.youtube.com/watch?v=HjsfG6c8e9U)
 
 ### B 10:10-10:20 LT: Promise.try: シンプルで強力な同期/非同期統合の未来 - 実装の深層と Promise の進化
 
 - 登壇者：saku[Cybozu]　[@sakupi01](https://x.com/sakupi01)
+- 動画：[YouTube](https://www.youtube.com/watch?v=FUnS9cnBhzY)
 
 <OG url="https://sakupi01.github.io/slides/ja/2024_jsconf_jp/" />
 
 ### C 10:10-10:20 LT: UI 開発における ヘッドレス UI ライブラリの重要性とデザインシステムへの取り入れ方
 
 - 登壇者：azukiazusa　[@azukiazusa9](https://x.com/azukiazusa9)
+- 動画：[YouTube](https://www.youtube.com/watch?v=hxXS7tUJ5Zc)
 
 <OG url="https://speakerdeck.com/azukiazusa1/ui-kai-fa-niokeru-hetudoresu-ui-raiburarinozhong-yao-xing-todezainsisutemuhenoqu-riru-refang" />
 
 ### A 10:20-10:30 LT: Web can be fun!
 
 - 登壇者：Phumrapee Limpianchop　[@rayriffy](https://x.com/rayriffy)
+- 動画：[YouTube](https://www.youtube.com/watch?v=rglDTJcJc9o)
 
 <OG url="https://storage.rayriffy.com/files/jsconf-web-can-be-fun.pdf" />
 
@@ -86,24 +97,28 @@ x アカウントについては、以下のように確認できたものを記
 - 登壇者：ECMAボーイ
   - uhyo　[@uhyo_](https://x.com/uhyo_)
   - shqld　[@shqld](https://x.com/shqld)
+- 動画：[YouTube](https://www.youtube.com/watch?v=6t8_UalGzS4)
 
 <OG url="https://docs.google.com/presentation/d/1cwNcGQ6-GNi8xf_E3XBRWgGIxksoeGiEtAZ6wDkeoXs/edit#slide=id.p" />
 
 ### C 10:20-10:30 LT: A Tour of Anti-patterns for Functional Programming
 
 - 登壇者：TAKASE Kazuyuki [@guvalif](https://x.com/guvalif)
+- 動画：[YouTube](https://www.youtube.com/watch?v=kRb-_T8zwNY)
 
 <OG url="https://speakerdeck.com/guvalif/a-tour-of-anti-patterns-for-functional-programming" />
 
 ### A 10:40-10:50 LT: Stay Fit, Code Better: A Sportsman’s Practical Tips for JavaScript Developers
 
 - 登壇者：Csaba Tamas
+- 動画：[YouTube](https://www.youtube.com/watch?v=hntI4kbVDhM)
 
 <OG url="https://tamascsaba.github.io/jsconfjp-2024-presentation/" />
 
 ### B 10:40-10:50 LT: romajip: 日本の住所 CSV データを活用した英語住所変換ライブラリを作った話
 
 - 登壇者：カンサンウン(Kang Sangun)　[@ksu_302](https://x.com/ksu_302)
+- 動画：[YouTube](https://www.youtube.com/watch?v=CyrFM05pc5Y)
 
 <OG url="https://speakerdeck.com/sangunkang/romajip-ri-ben-nozhu-suo-csvdetawohuo-yong-sitaying-yu-zhu-suo-bian-huan-raiburariwozuo-tutahua" />
 
@@ -113,34 +128,40 @@ x アカウントについては、以下のように確認できたものを記
 ### C 10:40-10:50 LT: Storybook との上手な向き合い方を考える
 
 - 登壇者：りんたろー　[@re_taro_](https://x.com/re_taro_)
+- 動画：[YouTube](https://www.youtube.com/watch?v=1WKZZDSw3B0)
 
 <OG url="https://speakerdeck.com/re_taro/storybook-tonoshang-shou-naxiang-kihe-ifang-wokao-eru" />
 
 ### A 10:50-11:00 LT: Building a Creative Coding Library for Fun and Learning
 
 - 登壇者：Anushka Trivedi, opheliagame　[@oopheliagame](https://x.com/oopheliagame)
+- 動画：[YouTube](https://www.youtube.com/watch?v=xWzSWba23oQ)
 
 ### B 10:50-11:00 LT: ステップバイステップで進める Yahoo!知恵袋のフロントエンドリアーキテクト
 
 - 登壇者：Koki Tsumura[LINEヤフー]　[@l1lhu1hu1](https://x.com/l1lhu1hu1)
+- 動画：[YouTube](https://www.youtube.com/watch?v=1sDeT87xaQQ)
 
 <OG url="https://speakerdeck.com/l1lhu1hu1/sutetupubaisutetupudejin-meruyahoo-zhi-hui-dai-nohurontoendoriakitekuto" />
 
 ### C 10:50-11:00 LT: あなたの知らない Function.prototype.toString() の世界
 
 - 登壇者：mizdra[はてな]　[@mizdra](https://x.com/mizdra)
+- 動画：[YouTube](https://www.youtube.com/watch?v=HaiX3Q0xluk)
 
 <OG url="https://speakerdeck.com/mizdra/the-world-of-function-prototype-tostring-you-dont-know" />
 
 ### A 11:10-11:40 WebAssembly Unleashed: Powering Server-Side Applications
 
 - 登壇者：Chris Fuentes　[@ChrisFt25](https://x.com/ChrisFt25)
+- 動画：[YouTube](https://www.youtube.com/watch?v=dr8nrxSeL_M)
 
 <OG url="https://speakerdeck.com/chrisft25/webassembly-unleashed-powering-server-side-applications" />
 
 ### B 11:10-11:40 React への依存を最小にするフロントエンドの設計
 
 - 登壇者：恩田 崇[一休]　[@takashi_onda](https://x.com/takashi_onda)
+- 動画：[YouTube](https://www.youtube.com/watch?v=Oc9c3JR7g7k)
 
 <OG url="https://speakerdeck.com/takonda/minimize-framework-dependency-in-frontend" />
 
@@ -149,88 +170,105 @@ x アカウントについては、以下のように確認できたものを記
 - 登壇者：
   - Hiroki Tani[Figma]　[@hiloki](https://x.com/hiloki)
   - Corey Lee
+- 動画：[YouTube](https://www.youtube.com/watch?v=F_FsKOX7gKc)
 
 <OG url="https://www.figma.com/community/file/1441988131613308209/you-dont-know-figma-yet" />
 
 ### D 11:10-11:40 WYSIWYG ウェブページビルダーを支える技術 とSever Driven UI への拡張
 
 - 登壇社：メルカリ
+- 動画：[YouTube](https://www.youtube.com/watch?v=vGntvLkVHQ0)
 
 ### A 11:40-12:10 Creating Fast-Feeling Web Apps
 
 - 登壇者：Trung Vo
+- 動画：[YouTube](https://www.youtube.com/watch?v=9dghl5sUXSE)
 
 ### B 11:40-12:10 React Compiler と Fine Grained Reactivity と宣言的 UI のこれから
 
 - 登壇者：ssssota (TOMIKAWA Sotaro)[ZOZO]　[@ssssotaro](https://x.com/ssssotaro)
+- 動画：[YouTube](https://www.youtube.com/watch?v=UD1qzCxOBDY)
 
 <OG url="https://speakerdeck.com/ssssota/the-next-chapter-of-declarative-ui" />
 
 ### C 11:40-12:10 30 Minutes to Understand All of RegExp Syntax
 
 - 登壇者：Yuji Sugiura[ピクセルグリッド]　[@leaysgur](https://x.com/leaysgur)
+- 動画：[YouTube](https://www.youtube.com/watch?v=obrdBywgQd4)
 
 <OG url="https://leaysgur.github.io/slides/jsconf_jp-2024/" />
 
 ### D 11:40-12:10 生成 AI でコーディング試験を解いてみよう
 
 - 登壇社：ハイヤールー
+- 動画：[YouTube](https://www.youtube.com/watch?v=YZJiMILLFZ4)
 
 ### A 13:10-13:40 Building AI apps with JavaScript
 
 - 登壇者：Aileen Villanueva Lecuona　[@aileenvl](https://x.com/aileenvl)
+- 動画：[YouTube](https://www.youtube.com/watch?v=OPVXdRE1y3E)
 
 ### B 13:10-13:40 Vapor Revolution: Unleashing Vue evolution and Potential with Vapor Mode
 
 - 登壇者：kazupon[Plaid]　[@kazu_pon](https://x.com/kazu_pon)
+- 動画：[YouTube](https://www.youtube.com/watch?v=Q33Iz5UxZoY)
 
 <OG url="https://speakerdeck.com/kazupon/vapor-revolution" />
 
 ### C 13:10-13:40 The challenges of web apps: what we’ve solved and what’s next?
 
 - 登壇者：Alexey Taktarov
+- 動画：[YouTube](https://www.youtube.com/watch?v=HSSUOQzfMe4)
 
 ### D 13:10-13:40 Yahoo! JAPAN トップページにおけるマイクロフロントエンド - 大規模組織における FE 開発を加速させるには
 
 - 登壇社：LINEヤフー
   - Kazuki Matsuda
+- 動画：[YouTube](https://www.youtube.com/watch?v=S-_VQYldzRg)
 
 ### A 13:40-14:10 Why Build a Secure Supply Chain Management?
 
 - 登壇者：VJ
+- 動画：[YouTube](https://www.youtube.com/watch?v=RD2JBWuxwfQ)
 
 ### B 13:40-14:10 幸せの形はどれも似ているが、不幸なプロジェクトはそれぞれの形がある
 
 - 登壇者：mizchi　[@mizchi](https://x.com/mizchi)
+- 動画：[YouTube](https://www.youtube.com/watch?v=AI2V3BKO-3A)
 
 <OG url="https://mizchi-20241123-jsconfjp.pages.dev/" />
 
 ### C 13:40-14:10 Boost your Test Implementation in Javascript by 10x?
 
 - 登壇者：Mesut Durukal　[@DurukalMesut](https://x.com/DurukalMesut)
+- 動画：[YouTube](https://www.youtube.com/watch?v=s_iJA5WEe2Y)
 
 ### D 13:40-14:10 電話を切らさない技術：電話自動応答サービスを支えるフロントエンド
 
 - 登壇社：IVRy
   - 佐川 善彦　[@barometrica](https://x.com/barometrica)
+- 動画：[YouTube](https://www.youtube.com/watch?v=W7bmJg474Zk)
 
 <OG url="https://speakerdeck.com/barometrica/dian-hua-woqie-rasanaiji-shu-dian-hua-zi-dong-ying-da-sabisuwozhi-eru-hurontoendo" />
 
 ### A 14:20-14:50 React Server Components とは何であって何でないか
 
 - 登壇者：akfm_sato　[@akfm_sato](https://x.com/akfm_sato)
+- 動画：[YouTube](https://www.youtube.com/watch?v=k68gPt0LI_g)
 
 <OG url="https://akifumisato.github.io/slide-of-tng-2024-rsc/1" />
 
 ### B 14:20-14:50 リアルアセットと Web のシームレスな活用のためのパスキー
 
 - 登壇者：maxmellon (Kento TSUJI)[東急]
+- 動画：[YouTube](https://www.youtube.com/watch?v=HINTAGgYlvg)
 
 ### C 14:20-14:50 LINE ヤフーにおける Prerender 技術の導入とその効果
 
 - 登壇者：
   - Masanari Hamada[LINEヤフー]
   - Tomoki Kiraku[LINEヤフー]
+- 動画：[YouTube](https://www.youtube.com/watch?v=bIGP3EIZIc8)
 
 <OG url="https://speakerdeck.com/narirou/lineyahuniokeruprerenderji-shu-nodao-ru-tosonoxiao-guo" />
 
@@ -238,16 +276,19 @@ x アカウントについては、以下のように確認できたものを記
 
 - 登壇社：Helpfeel
   - ohnishiakira
+- 動画：[YouTube](https://www.youtube.com/watch?v=K0jBbCXkF04)
 
 <OG url="https://scrapbox.io/HelpfeelTech/Cosense%E3%81%AETranslation_mode%E3%81%AE%E8%A8%AD%E8%A8%88%E3%81%A8%E5%AE%9F%E8%A3%85_(JSConf_2024)" />
 
 ### A 14:50-15:20 Encrypting data in the Browser - Exploring Web Crypto APIs
 
 - 登壇者：Aakansha Doshi　[@aakansha1216](https://x.com/aakansha1216)
+- 動画：[YouTube](https://www.youtube.com/watch?v=SwiPLoN4HQE)
 
 ### B 14:50-15:20 JavaScript のモジュール解決の相互運用性
 
 - 登壇者：berlysia[ドワンゴ]　[@berlysia](https://x.com/berlysia)
+- 動画：[YouTube](https://www.youtube.com/watch?v=EMeOKI_qnHg)
 
 <OG url="https://speakerdeck.com/berlysia/interoperability-of-module-resolutions-in-javascript" />
 
@@ -256,21 +297,25 @@ x アカウントについては、以下のように確認できたものを記
 - 登壇者：
   - Tiger
   - Daphne Oakes
+- 動画：[YouTube](https://www.youtube.com/watch?v=DHqM0Mnp5s4)
 
 ### D 14:50-15:20 静的解析を活用した i18n 対応
 
 - 登壇社：LayerX
   - minako-ph　[@minako__ph](https://x.com/minako__ph)
+- 動画：[YouTube](https://www.youtube.com/watch?v=vGvptJmwQ18)
 
 <OG url="https://speakerdeck.com/minako__ph/jing-de-jie-xi-deshi-xian-sitaxiao-lu-de-nai18ndui-ying-noshi-zu-midukuri" />
 
 ### A 15:30-16:00 Web 標準の進化を止めない！ Baseline というブラウザサポートの考え方
 
 - 登壇者：Mariko Kosaka[Google]　[@kosamari](https://x.com/kosamari)
+- 動画：[YouTube](https://www.youtube.com/watch?v=tIVyEjiUv4g)
 
 ### B 15:30-16:00 Modular Monolith Monorepo
 
 - 登壇者：坂本結衣[newmo]　[@yui_tang](https://x.com/yui_tang)
+- 動画：[YouTube](https://www.youtube.com/watch?v=aN8o7lJVmyM)
 
 <OG url="https://speakerdeck.com/yuisakamoto/modular-monolith-monorepo-sinpurusawobao-tinagaramonoreponomeritutowozui-da-hua-suru" />
 
@@ -281,6 +326,7 @@ x アカウントについては、以下のように確認できたものを記
 
 - 登壇社：ミイダス
   - Mizobuchi
+- 動画：[YouTube](https://www.youtube.com/watch?v=0SZRvwcAPw8)
 
 <OG url="https://note.com/miidas_tech/n/n362dbdc1ad83" />
 
@@ -289,16 +335,19 @@ x アカウントについては、以下のように確認できたものを記
 - 登壇社：KINTOテクノロジーズ
   - N Okawara　[@nori_okwr](https://x.com/nori_okwr)
   - ahomu　[@ahomu](https://x.com/ahomu)
+- 動画：[YouTube](https://www.youtube.com/watch?v=d84gAFv6hyQ)
 
 <OG url="https://speakerdeck.com/kintotechdev/kurumanosabusukuwo-next-dot-jsdenei-zhi-hua-sitajing-yan-tosono1nian-hou" />
 
 ### A 16:00-16:30 Moving Three.js from WebGL to WebGPU
 
 - 登壇者：Mr.doob　[@mrdoob](https://x.com/mrdoob)
+- 動画：[YouTube](https://www.youtube.com/watch?v=6k5ZK3SV3ko)
 
 ### B 16:00-16:30 JavaScript のイテレータとイテラブルの概要と課題、未来
 
 - 登壇者：Sosuke Suzuki[Ubie]　[@__sosukesuzuki](https://x.com/__sosukesuzuki)
+- 動画：[YouTube](https://www.youtube.com/watch?v=E4wb9a66Fhw)
 
 <OG url="https://speakerdeck.com/sosukesuzuki/iteretatoiteraburunogai-yao-toke-ti-wei-lai" />
 
@@ -306,6 +355,7 @@ x アカウントについては、以下のように確認できたものを記
 
 - 登壇社：EARTHBRAIN
   - Yuichi Goto　[@_yasaichi](https://x.com/_yasaichi)
+- 動画：[YouTube](https://www.youtube.com/watch?v=YwCsbQSI6ww)
 
 <OG url="https://decks.yasaichi.com/20241123/type-safe-lightweight-ddd-with-effect-schema#1" />
 
@@ -313,10 +363,13 @@ x アカウントについては、以下のように確認できたものを記
 
 - 登壇社：メドレー
   - Yuta Takahashi　[@Wakeupsloth](https://x.com/Wakeupsloth)
+- 動画：[YouTube](https://www.youtube.com/watch?v=x3FySxuQ_Ng)
 
 <OG url="https://speakerdeck.com/medley/deep-dive-into-react-component-design-for-medical-systems" />
 
 ### A, B, C 16:40-17:40 Sponsor LT × 12
+
+- 動画：[YouTube](https://www.youtube.com/watch?v=YIGsZa4Eglg)
 
 #### AI 時代のスキル面接
 
