post fix: デブサミ2025 - わたしの "コミュニティへの還元" リレーションの本人記事追加(#207)

--- a/src/content/posts/2025/2025-02-16-developers-summit-2025.mdx
+++ b/src/content/posts/2025/2025-02-16-developers-summit-2025.mdx
@@ -553,7 +553,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 #### わたしの "コミュニティへの還元" リレーション
 - 登壇者：歌丸 杏淑[リンケージ]　[@asumikam](https://x.com/asumikam)
 
-<OG url="https://speakerdeck.com/asumikam/my-contribution-to-the-community" />
+本人記事 + スライド
+<OG url="https://asumikam.com/entry/2025/02/16/155333" />
 
 ---
 
