post fix: デブサミ2025記事に資料と本人記事追加(#207)
- スライド追加
  - 13-B-7 プロダクトの価値を高めるためにコーディング以外にできること～共通言語でつくる異職種コミュニケーション～
  - 14-C-5 オブザーバビリティの観点でみるAWS
- 本人記事追加
  - 13-E-7 組織貢献をするフリーランスエンジニアという生き方
  - 13-A-9 「ITエンジニア本大賞2025」プレゼン大会 - 7日間でハッキングをはじめる本 TryHackMeを使って身体で覚える攻撃手法と脆弱性
  - 13-B-9 リーダブルテストコード～メンテナンスしやすいテストコードを作成する方法を考える～
  - 14-B-4 開発スピードは上がっている…品質はどうする？ ～スピードと品質を両立させるためのプロダクト開発の進め方とは～
  - 14-E-4 ハッキングの世界に迫る～攻撃者の思考で考えるセキュリティ～

--- a/src/content/posts/2025/2025-02-16-developers-summit-2025.mdx
+++ b/src/content/posts/2025/2025-02-16-developers-summit-2025.mdx
@@ -30,6 +30,19 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 ちなみに [Zenn 版](https://zenn.dev/yumemi_inc/articles/2025-02-16-developers-summit-2025)ではスライド埋め込みをしているので、そちらの方がさっと見やすいかもです。
 
+---
+更新履歴
+2025/02/18
+- スライド追加
+  - 13-B-7 プロダクトの価値を高めるためにコーディング以外にできること～共通言語でつくる異職種コミュニケーション～
+  - 14-C-5 オブザーバビリティの観点でみるAWS
+- 本人記事追加
+  - 13-E-7 組織貢献をするフリーランスエンジニアという生き方
+  - 13-A-9 「ITエンジニア本大賞2025」プレゼン大会 - 7日間でハッキングをはじめる本 TryHackMeを使って身体で覚える攻撃手法と脆弱性
+  - 13-B-9 リーダブルテストコード～メンテナンスしやすいテストコードを作成する方法を考える～
+  - 14-B-4 開発スピードは上がっている…品質はどうする？ ～スピードと品質を両立させるためのプロダクト開発の進め方とは～
+  - 14-E-4 ハッキングの世界に迫る～攻撃者の思考で考えるセキュリティ～
+
 ## 2025/02/13(木)
 ### 13-A-1 技術と情熱で創る未来
 - 登壇者：及川 卓也[Tably]　[@takoratta](https://x.com/takoratta)
@@ -189,6 +202,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 ### 13-B-7 プロダクトの価値を高めるためにコーディング以外にできること～共通言語でつくる異職種コミュニケーション～
 - 登壇者：浅野 卓也[LegalOn Technologies]　[@takuya_b](https://x.com/takuya_b)
 
+<OG url="https://speakerdeck.com/legalontechnologies/communication-models-for-product-development" />
+
 ### 13-C-7 スタートアップ1人目QAエンジニアがQAチームを立ち上げ、"個"からチーム、そして"組織"に成長するまで
 - 登壇者：miisan[令和トラベル]　[@mii________san](https://x.com/mii________san)
 
@@ -199,6 +214,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 ### 13-E-7 組織貢献をするフリーランスエンジニアという生き方
 - 登壇者：竹端 尚人　[@n_takehata](https://x.com/n_takehata)
+
+本人記事
+<OG url="https://blog.takehata-engineer.com/entry/look-back-at-developers-summit-2025-speaker" />
 
 <OG url="https://speakerdeck.com/n_takehata/organizational-contributior-engineer" />
 
@@ -235,9 +253,13 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 #### 7日間でハッキングをはじめる本 TryHackMeを使って身体で覚える攻撃手法と脆弱性
 - 著者：野溝 のみぞう[T3 Realize]　[@nomizooone](https://x.com/nomizooone)
 
+<OG url="https://www.shoeisha.co.jp/book/detail/9784798181578" />
+
+本人記事
+<OG url="https://note.com/nomizone/n/n9aab96ba15ff" />
+
 <OG url="https://speakerdeck.com/nomizone/7ri-jian-dehatukinguwohazimeruben-itenziniaben-da-shang-2025" />
 
-<OG url="https://www.shoeisha.co.jp/book/detail/9784798181578" />
 
 #### VTuberサプーが教える！ Python 初心者のコード/プロのコード
 - 著者：サプー　[@PythonSuppl](https://x.com/PythonSuppl)
@@ -273,6 +295,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
   - 和田 卓人　[@t_wada](https://x.com/t_wada)
   - 末村 拓也[オーティファイ]　[@tsueeemura](https://x.com/tsueeemura)
   - 風間 裕也[10X/B-Testing]　[@nihonbuson](https://x.com/nihonbuson)
+
+本人記事（風間 裕也）
+<OG url="https://nihonbuson.hatenadiary.jp/entry/Developers-Summit-2025" />
 
 <OG url="https://speakerdeck.com/nihonbuson/readable-test-code" />
 
@@ -393,6 +418,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
   - 安達 賢二[SReEE(スリー)]　[@kitanosirokuma](https://x.com/kitanosirokuma)
   - 風間 裕也[10X/B-Testing]　[@nihonbuson](https://x.com/nihonbuson)
 
+本人記事（風間 裕也）
+<OG url="https://nihonbuson.hatenadiary.jp/entry/Developers-Summit-2025" />
+
 <OG url="https://speakerdeck.com/nihonbuson/agile-and-quality" />
 
 ### 14-C-4 私が新卒からプロへと変わる3年間～「エンジニア基礎」研修資料で伝えたエンジニアになるまでの道のり～
@@ -408,6 +436,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 ### 14-E-4 ハッキングの世界に迫る～攻撃者の思考で考えるセキュリティ～
 - 登壇者：野溝 のみぞう[T3 Realize]　[@nomizooone](https://x.com/nomizooone)
 
+本人記事
+<OG url="https://note.com/nomizone/n/n0b5620339205" />
+
 <OG url="https://speakerdeck.com/nomizone/hatukingunoshi-jie-nipo-ru-gong-ji-zhe-nosi-kao-dekao-erusekiyuritei" />
 
 ### 14-A-5 現場で役立つAPIデザイン
@@ -420,6 +451,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 ### 14-C-5 オブザーバビリティの観点でみるAWS
 - 登壇者：山口 能迪[アマゾンウェブサービスジャパン]　[@ymotongpoo](https://x.com/ymotongpoo)
+
+<OG url="https://speakerdeck.com/ymotongpoo/aws-from-observability-perspective" />
 
 ### 14-D-5 クリエイティビティとテクノロジーの融合で実現する、統合マーケティングプラットフォームとは​
 - 登壇者：
