misc: 2020年のOGP更新 + リンク切れ調整(#217)

--- a/src/content/posts/2020/2020-03-14-slack-my-manner.mdx
+++ b/src/content/posts/2020/2020-03-14-slack-my-manner.mdx
@@ -2,7 +2,7 @@
 title: "自分が業務をする上でのSlackの使い方を公開してみる"
 description: "積極的にSlackを使うようになったことで業務がやりやすくなったので、その方法を公開"
 pubDate: "2020-03-14"
-updatedDate: "2020-03-14"
+updatedDate: "2025-09-14"
 category: "tool-and-service"
 tags: ["Slack"]
 ---
@@ -143,8 +143,7 @@ Slack を使うためにはまずワークスペースを作ります。
 
 ちなみに小ネタとして、宛先にチャンネルを指定+全体にメンション飛ばしたい時は、通知内容に`@here`などの全体メンションをいれるとよいです。
 
-コマンド生成のツールもあるので構文覚えづらい方は活用されてはどうでしょう。
-<OG url="https://slack-remind-creator.netlify.com" />
+※2025/09/14...以前はコマンド生成のツールサービスがあったのですが、今はアクセスできなくなっていました。
 
 ---
 
@@ -158,4 +157,3 @@ Slack を使うためにはまずワークスペースを作ります。
 ## 参考リンクまとめ
 - [Slack](https://slack.com/intl/ja-jp/)
 - [wikipedia - Slack](https://ja.wikipedia.org/wiki/Slack_(%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2))
-- [Slack remind creator](https://slack-remind-creator.netlify.com/)
