--- a/src/content/posts/2020/2020-04-04-react-proptypes.mdx
+++ b/src/content/posts/2020/2020-04-04-react-proptypes.mdx
@@ -345,7 +345,7 @@ React.element と似ていますが、こちらは以下のような記述があ
 > 関数、文字列、または「要素のような」オブジェクト（React.Fragment、Suspenseなど）
 
 詳細は React の isValidElementType を見てね、とのこと。
-<OG url="https://github.com/facebook/react/blob/main/packages/shared/isValidElementType.js" />
+<OG url="https://github.com/facebook/react/blob/v17.0.2/packages/shared/isValidElementType.js" />
 
 受け付ける例.
 
