--- a/src/content/posts/2020/2020-08-08-developers-summit-2020-summer.mdx
+++ b/src/content/posts/2020/2020-08-08-developers-summit-2020-summer.mdx
@@ -2,7 +2,7 @@
 title: "Developers Summit 2020 Summer 資料リンクまとめ"
 description: "デブサミ2020夏の公開資料、Twitterのリンクまとめ"
 pubDate: "2020-08-08"
-updatedDate: "2023-11-25"
+updatedDate: "2025-09-14"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
@@ -15,6 +15,7 @@ tags: ["リンク集", "Developers Summit"]
 
 **更新履歴**
 2023/11/25...トランスフォーメーション・ジャーニー：資料リンク切れを起こしていたので削除。
+2025/09/14...B-6 Androidスマホの生体認証の脆弱性、調べてみたらよくある話だった。：講演動画がリンク切れを起こしていたので削除。
 
 ---
 
@@ -125,9 +126,6 @@ YouTube ※講演動画
 
 ### B-6 Androidスマホの生体認証の脆弱性、調べてみたらよくある話だった。
 - 登壇者：松岡 正人[日本シノプシス]
-
-※講演動画視聴は要登録
-<OG url="https://www.brighttalk.com/webcast/18289/430677/android" />
 
 ### C-6 人の仕事、機械の仕事。エンジニアによるカスタマーサポート改善
 - 登壇者：本間 光宣[ミクシィ]　[@_mitsu9](https://twitter.com/_mitsu9)
