misc: 2021年のOGP更新 + リンク切れ調整(#217)

--- a/src/content/posts/2021/2021-02-20-developers-summit-2021.mdx
+++ b/src/content/posts/2021/2021-02-20-developers-summit-2021.mdx
@@ -2,7 +2,7 @@
 title: "Developers Summit 2021 公開資料・Twitterリンクまとめ"
 description: "デブサミ2021の公開資料、Twitterのリンクまとめ"
 pubDate: "2021-02-20"
-updatedDate: "2023-11-25"
+updatedDate: "2025-09-14"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
@@ -14,7 +14,7 @@ tags: ["リンク集", "Developers Summit"]
 
 **更新履歴**
 2023/11/25...18-C-6 価値貢献につなげるデータ組織のシンプル戦略マネジメント：資料リンク切れを起こしていたので削除。
-
+2025/09/14...19-C-4 Continuous Teaming ～2つのチーム移籍の物語～：資料リンク切れを起こしていたので削除。
 ---
 
 import OG from "@/components/OG.astro"
@@ -357,9 +357,6 @@ Twitter アカウントについては、多くの方はデブサミ公式サイ
 - 登壇者：
   - kyon_mm[うさぎ組]　[@kyon_mm](https://twitter.com/kyon_mm)
   - 及部 敬雄[デンソー]　[@TAKAKING22](https://twitter.com/TAKAKING22)
-
-本人記事 + スライド
-<OG url="https://takaking22.com/2021/continuous-teaming" />
 
 ### 19-D-4 Zenn 個人開発の限界に挑んだ話
 - 登壇者：catnose　[@catnose99](https://twitter.com/catnose99)
