misc: 2022年のOGP更新 + リンク切れ調整(#217)

--- a/src/content/posts/2022/2022-05-15-techfeed-conference-2022.mdx
+++ b/src/content/posts/2022/2022-05-15-techfeed-conference-2022.mdx
@@ -2,7 +2,7 @@
 title: "TechFeed Conference 2022 公開資料・Twitterリンクまとめ"
 description: "TechFeed Conference 2022の公開資料、Twitterのリンクまとめ"
 pubDate: "2022-05-15"
-updatedDate: "2022-05-15"
+updatedDate: "2025-09-15"
 category: "event"
 tags: ["リンク集"]
 ---
@@ -29,7 +29,8 @@ Twitter アカウントについては、多くの方は公式サイトの紹介
 
 ---
 更新履歴.
-- 2022/05/17...「Vue3って結局良いの？」の資料追加
+- 2022/05/17...「Vue3って結局良いの？」：資料追加
+- 2025/09/15...13:35-13:40 - How useEvent would change out applications：リンク切れを起こしていたので資料削除
 
 ---
 自分はこのイベントに関しては、当日に参加者の方のツイートが TL に流れてきたので初めて知りまして...。
@@ -98,9 +99,6 @@ Twitter アカウントについては、多くの方は公式サイトの紹介
 - 登壇者：@koba04[Cybozu]　[@koba04](https://twitter.com/koba04)
 
 <OG url="https://speakerdeck.com/koba04/how-useevent-would-change-our-applications" />
-
-本人記事
-<OG url="https://blog.koba04.com/post/2022/05/14/speaking-about-useevent-at-techfeed-conf" />
 
 ### Vue.js
 #### 13:40-13:45 - Vue3って結局良いの？
