--- a/src/content/posts/2022/2022-11-27-jsconf-jp-2022.mdx
+++ b/src/content/posts/2022/2022-11-27-jsconf-jp-2022.mdx
@@ -2,7 +2,7 @@
 title: "JSConf JP 2022 公開資料・Twitterリンクまとめ"
 description: "JSConf JP 2022の公開資料、Twitterアカウントのリンクまとめ"
 pubDate: "2022-11-27"
-updatedDate: "2022-11-27"
+updatedDate: "2025-09-15"
 category: "event"
 tags: ["リンク集", "JSConf JP"]
 ---
@@ -14,6 +14,13 @@ import OG from "@/components/OG.astro"
 
 ※2022/11/28追記
 [Zenn 版](https://zenn.dev/yumemi_inc/articles/2022-11-27-jsconf-jp-2022)の方でねぎしさんからいただいたコメントを元に、各講演に時間指定をした YouTube リンクを追記しました。
+
+---
+{/* <!-- textlint-disable ja-technical-writing/ja-no-mixed-period --> */}
+**更新履歴**
+2025/09/15...A 17:40-17:50 JavaScript Testing Framework: Under the Hood：リンク切れにより資料削除
+{/* <!-- textlint-enable ja-technical-writing/ja-no-mixed-period --> */}
+---
 
 ## はじめに
 <OG url="https://jsconf.jp/2022" />
@@ -228,8 +235,6 @@ Twitter アカウントについては、ご本人が当イベントで登壇さ
 ### A 17:40-17:50 JavaScript Testing Framework: Under the Hood
 - 登壇者：Yoshiaki Togami　[@togami2864](https://twitter.com/togami2864)
 - [動画](https://youtu.be/luiNGMM9ZGU?t=27657)
-
-<OG url="https://speakerdeck.com/yoshiaki_togami/javascript-testing-framework-under-the-hood-jsconfjp2022" />
 
 関連
 <OG url="https://cpojer.net/posts/building-a-javascript-testing-framework" />
