misc: 2023年のOGP更新 + リンク切れ調整(#217)

--- a/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
+++ b/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
@@ -2,7 +2,7 @@
 title: "フロントエンドカンファレンス沖縄 2023 公開資料・Xアカウントリンクまとめ"
 description: "フロントエンドカンファレンス沖縄 2023の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2023-11-18"
-updatedDate: "2023-12-03"
+updatedDate: "2025-09-15"
 category: "event"
 tags: ["リンク集", "フロントエンドカンファレンス"]
 ---
@@ -13,7 +13,7 @@ tags: ["リンク集", "フロントエンドカンファレンス"]
 import OG from "@/components/OG.astro"
 
 ## はじめに
-<OG url="https://frontend-conf.okinawa.jp" />
+※2025/09/15...当時は公式サイトがありましたが、サイトがクローズされたようでした。
 
 登壇者名は敬称略させていただいています。
 スライドについては、ご本人がツイートで展開されていたり、スライドサービスにアップロードされているものを記載。
@@ -33,6 +33,7 @@ X アカウントについては、資料に記載されていたり、資料公
 2023/11/19...スライド追加：11:50 デザインシステムの技術選定・設計の勘所 2023
 2023/11/20...資料追加：12:30 ReactメインのチームにNext.jsを導入した道のり
 2023/12/03...レポート記事追加：necco さんのセッション
+2025/09/15...リンク切れにより資料削除：16:25 Expo RouterはExpo導入の決め手となるか
 
 ## アーカイブ
 本イベントは YouTube で配信されていて、アーカイブが残るようです。
@@ -128,8 +129,6 @@ necco さんのレポート記事
 
 ### 16:25 Expo RouterはExpo導入の決め手となるか
 - 登壇者：どぎー[ゆめみ]　[@Kaito_Dogi](https://x.com/Kaito_Dogi)
-
-<OG url="https://speakerdeck.com/doggy/expo-router-ha-expo-dao-ru-nojue-meshou-tonaruka-hurontoendokanhuarensuchong-nawa-2023-at-kaito-dogi" />
 
 ### 16:55 Now and Next generation of CSS Cascading Model
 - 登壇者：araya[日本経済新聞社]　[@arayaryoma](https://x.com/arayaryoma)
