misc: 2024年のOGP更新 + リンク切れ調整(#217)

--- a/src/content/posts/2024/2024-02-17-developers-summit-2024.mdx
+++ b/src/content/posts/2024/2024-02-17-developers-summit-2024.mdx
@@ -2,7 +2,7 @@
 title: "Developers Summit 2024 公開資料・Xアカウントリンクまとめ"
 description: "デブサミ2024の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2024-02-17"
-updatedDate: "2024-04-13"
+updatedDate: "2025-09-15"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
@@ -55,6 +55,10 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 2024/04/13
 - スライド・本人記事追加
   - 15-D-3 『グランブルーファンタジー』100万行を超える大規模なシステム再構築～10周年のその先へ～
+
+2025/09/15
+- リンク切れにより資料削除
+  - 15-D-7 7年間1000件の障害事例からわかった、障害対応の改善ポイント～協同で変えるシステム障害対応とは？～
 
 ## 2024/02/15(木)
 ### 15-A-1 エンジニアのための、生成AIとの付き合い方
@@ -204,8 +208,6 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 ### 15-D-7 7年間1000件の障害事例からわかった、障害対応の改善ポイント～協同で変えるシステム障害対応とは？～
 - 登壇者：野村 浩司[NTTデータ]　[@nomurakuj](https://twitter.com/nomurakuj)
-
-<OG url="https://speakerdeck.com/nomurakuj/15-d-7-nomurakuj-developers-summit2024" />
 
 ### 15-E-7 Professional Serviceという働き方
 - 登壇者：須田 桂伍[ソラコム]
