--- a/src/content/posts/2024/2024-08-25-frontend-conf-hokkaido-2024.mdx
+++ b/src/content/posts/2024/2024-08-25-frontend-conf-hokkaido-2024.mdx
@@ -13,7 +13,7 @@ tags: ["リンク集", "フロントエンドカンファレンス"]
 import OG from "@/components/OG.astro"
 
 ## はじめに
-<OG url="https://www.frontend-conf.jp" />
+<OG url="https://www.frontend-conf.jp/2024" />
 
 登壇者名は敬称略させていただいています。
 スライドについては、ご本人がツイートで展開されていたり、スライドサービスにアップロードされているものを記載。
