--- a/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
+++ b/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
@@ -2,7 +2,7 @@
 title: "JSConf JP 2024 公開資料・Xアカウントリンクまとめ"
 description: "JSConf JP 2024の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2024-11-24"
-updatedDate: "2024-11-28"
+updatedDate: "2025-09-15"
 category: "event"
 tags: ["リンク集", "JSConf JP"]
 ---
@@ -40,6 +40,8 @@ x アカウントについては、以下のように確認できたものを記
   - スライドを追加：D 15:30-16:00 クルマのサブスクサービスを Next.js で内製化した経験とその1年後
 - 2024/12/31
   - YouTube ライブ配信リンクをトラックごとに追加 + 各講演動画リンクも追加
+- 2025/09/15
+  - リンク切れにより資料削除：A 14:20-14:50 React Server Components とは何であって何でないか
 
 ## アーカイブ
 
@@ -255,8 +257,6 @@ x アカウントについては、以下のように確認できたものを記
 
 - 登壇者：akfm_sato　[@akfm_sato](https://x.com/akfm_sato)
 - 動画：[YouTube](https://www.youtube.com/watch?v=k68gPt0LI_g)
-
-<OG url="https://akifumisato.github.io/slide-of-tng-2024-rsc/1" />
 
 ### B 14:20-14:50 リアルアセットと Web のシームレスな活用のためのパスキー
 
