remove: noteのリンクを除去(#217)
唯一の記事は非公開にする + note で執筆はしないと思うので。

--- a/src/content/posts/2023/2023-12-31-looking-back-2023-tech.mdx
+++ b/src/content/posts/2023/2023-12-31-looking-back-2023-tech.mdx
@@ -2,7 +2,7 @@
 title: "2023年振り返り ～技術活動、ブログ、キャリア編～"
 description: "2023年のGitのコミット履歴から、記事執筆など技術活動、キャリアの振り返り"
 pubDate: "2023-12-31"
-updatedDate: "2023-12-31"
+updatedDate: "2025-09-15"
 category: "develop"
 tags: ["振り返り", "ブログ", "TIL"]
 ---
@@ -131,7 +131,6 @@ GitHub 側の9月より前の活動は重複カウントとみなしてカウン
 ### ブログ以外の記事執筆活動
 <OG url="https://zenn.dev/h_yoshikawa0724" />
 <OG url="https://qiita.com/h-yoshikawa44" />
-<OG url="https://note.com/h_yoshikawa44" />
 
 ※Zenn および Qiita に投稿した記事は、基本的には当ブログでも投稿しています。
 
@@ -146,9 +145,10 @@ GitHub 側の9月より前の活動は重複カウントとみなしてカウン
 
 やはり文字数は少なめ（昨年は13万文字くらい）
 
-Qiita, Crieit, note は今年活動なしです。
+Qiita, Crieit, ~note~ は今年活動なしです。
 
 ※2024/09/14追記：Crieit はサービスクローズされました。
+※2025/09/15...note のリンクは除去しました。
 
 ### 個人開発
 新規活動は特になし。
